--- a/src/stylesheets/scss/partials/_Home.scss
+++ b/src/stylesheets/scss/partials/_Home.scss
@@ -71,6 +71,11 @@
   }
 
   .Home-mid-segment {
+    .section-header {
+      @media screen and (max-width: 900px) {
+        margin-bottom: 0;
+      }
+    }
     .what-we-do-container {
       display: flex;
       flex-direction: column;
@@ -143,6 +148,10 @@
       //   }
       // }
     }
+
+    .NavButton {
+      margin-top: 2.5rem;
+    }
   }
 
   .testimonials {
@@ -168,6 +177,11 @@
         }
       }
     }
+  }
+
+  .footer-section {
+    margin-bottom: 0;
+    padding-bottom: 0;
   }
 
   .footer {
